# workspace-docs-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
adr/: 0001-tech-stack.md  0002-auth-jwt.md  0003-rbac.md  0004-documents.md  0005-audit-policy.md  0006-idempotency.md  0008-slo-alert.md
alembic/: env.py
alembic/versions/: 12834e899965_create_documents.py  5b991cff94c4_create_users.py  70d4d4f3c34e_noop_revision.py  7d3405968bc2_init.py  bf00e251e0a2_create_audit_logs.py  cf8600d5c496_create_workspaces_and_memberships.py  dae28a3f4585_create_jobs.py
app/: celery_app.py  main.py
app/api/: auth.py  debug.py  deps.py  workspaces.py
app/core/: config.py  errors.py  log_context.py  logging.py  metrics.py  rbac.py  request_id.py  security.py  tokens.py
app/db/: session.py
tests/: confest.py  conftest.py  test_audit_docs.py  test_audit_export_create.py  test_audit_members.py  test_audit_search.py  test_audit_transitions.py  test_docs_create.py  test_docs_delete.py  test_docs_filter_status.py  test_docs_filter_tag.py  test_docs_get.py  test_docs_list_paging.py  test_docs_patch.py  test_docs_publish_archive.py  test_docs_search_title.py  test_error_format.py  test_export_failures.py  test_exports_idempotency.py  test_health.py  test_job_download.py  test_job_get.py  test_login.py  test_me.py  test_member_change_role.py  test_members_list_delete.py  test_rbac.py  test_request_id.py  test_require_permission.py  test_security.py  test_signup.py  test_workspace_get.py  test_workspaces_create.py  test_workspaces_list.py
(+58 files in other folders)
